// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown default 1`] = `
<DocumentFragment>
  .c7 {
  font-size: 13px;
  padding: 8px 16px;
}

.c6 {
  padding: 8px 0;
}

.c5 + .c5 {
  border-top: 1px solid #D4D8DD;
}

.c4 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  top: calc(100% + 10px);
  left: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  overflow-y: auto;
  opacity: 1;
  border-radius: 4px;
  background-color: #fff;
  box-shadow: 1px 2px 4px rgba(0,0,0,0.3);
  visibility: visible;
}

.c4 > .block {
  padding: 8px 16px;
}

.c3 > .block + .c3 > .block {
  border-top: 1px solid #D4D8DD;
}

.c4[aria-hidden="true"] {
  -webkit-transform: scale(0.75,0.5625);
  -ms-transform: scale(0.75,0.5625);
  transform: scale(0.75,0.5625);
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  visibility: hidden;
  opacity: 0;
}

.c2 {
  font-size: 13px;
  color: #333333;
}

.c2:hover {
  color: #333333;
}

.c8 {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:visited {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:focus {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:active {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  cursor: pointer;
  color: #3B7DE9;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8.disabled {
  cursor: not-allowed;
  color: #999999;
}

.c1 {
  font-size: 13px;
  color: #333333;
  background-color: #fff;
  border: none;
}

.c1 svg {
  margin-left: 6px;
}

.c0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

<div
    class="c0"
  >
    <button
      aria-haspopup="true"
      class="c1"
    >
      ラベル
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-up fa-w-10 fa-rotate-180 c2"
        data-icon="caret-up"
        data-prefix="fas"
        focusable="false"
        role="img"
        theme="[object Object]"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="c3 c4"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown with multiple blocks 1`] = `
<DocumentFragment>
  .c7 {
  font-size: 13px;
  padding: 8px 16px;
}

.c6 {
  padding: 8px 0;
}

.c5 + .c5 {
  border-top: 1px solid #D4D8DD;
}

.c4 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  top: calc(100% + 10px);
  left: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  overflow-y: auto;
  opacity: 1;
  border-radius: 4px;
  background-color: #fff;
  box-shadow: 1px 2px 4px rgba(0,0,0,0.3);
  visibility: visible;
}

.c4 > .block {
  padding: 8px 16px;
}

.c3 > .block + .c3 > .block {
  border-top: 1px solid #D4D8DD;
}

.c4[aria-hidden="true"] {
  -webkit-transform: scale(0.75,0.5625);
  -ms-transform: scale(0.75,0.5625);
  transform: scale(0.75,0.5625);
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  visibility: hidden;
  opacity: 0;
}

.c2 {
  font-size: 13px;
  color: #333333;
}

.c2:hover {
  color: #333333;
}

.c8 {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:visited {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:focus {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:active {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  cursor: pointer;
  color: #3B7DE9;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8.disabled {
  cursor: not-allowed;
  color: #999999;
}

.c1 {
  font-size: 13px;
  color: #333333;
  background-color: #fff;
  border: none;
}

.c1 svg {
  margin-left: 6px;
}

.c0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

<div
    class="c0"
  >
    <button
      aria-haspopup="true"
      class="c1"
    >
      ラベル
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-up fa-w-10 fa-rotate-180 c2"
        data-icon="caret-up"
        data-prefix="fas"
        focusable="false"
        role="img"
        theme="[object Object]"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="c3 c4"
    >
      <div
        class="c5 c6"
      >
        Blockを複数配置することで、内容を分割できます。
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
      </div>
      <div
        class="c5 c6"
      >
        Blockを複数配置することで、内容を分割できます。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown with placement 1`] = `
<DocumentFragment>
  .c7 {
  font-size: 13px;
  padding: 8px 16px;
}

.c6 {
  padding: 8px 0;
}

.c5 + .c5 {
  border-top: 1px solid #D4D8DD;
}

.c4 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  position: absolute;
  top: calc(100% + 10px);
  right: 0;
  -webkit-transform-origin: top right;
  -ms-transform-origin: top right;
  transform-origin: top right;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms;
  overflow-y: auto;
  opacity: 1;
  border-radius: 4px;
  background-color: #fff;
  box-shadow: 1px 2px 4px rgba(0,0,0,0.3);
  visibility: visible;
}

.c4 > .block {
  padding: 8px 16px;
}

.c3 > .block + .c3 > .block {
  border-top: 1px solid #D4D8DD;
}

.c4[aria-hidden="true"] {
  -webkit-transform: scale(0.75,0.5625);
  -ms-transform: scale(0.75,0.5625);
  transform: scale(0.75,0.5625);
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, -webkit-transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  -webkit-transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  transition: opacity 299ms cubic-bezier(0.4,0,0.2,1) 0ms, transform 199ms cubic-bezier(0.4,0,0.2,1) 0ms, visibility 299ms linear 299ms;
  visibility: hidden;
  opacity: 0;
}

.c2 {
  font-size: 13px;
  color: #333333;
}

.c2:hover {
  color: #333333;
}

.c8 {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:visited {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:focus {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:active {
  color: #3B7DE9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  cursor: pointer;
  color: #3B7DE9;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8.disabled {
  cursor: not-allowed;
  color: #999999;
}

.c1 {
  font-size: 13px;
  color: #333333;
  background-color: #fff;
  border: none;
}

.c1 svg {
  margin-left: 6px;
}

.c0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

<div
    class="c0"
  >
    <button
      aria-haspopup="true"
      class="c1"
    >
      ラベル
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-caret-up fa-w-10 fa-rotate-180 c2"
        data-icon="caret-up"
        data-prefix="fas"
        focusable="false"
        role="img"
        theme="[object Object]"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="c3 c4"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
        <div
          class="c7"
        >
          <a
            class="c8"
            href="#"
          >
            ユーザー設定
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
